--- a/styles.css
+++ b/styles.css
@@ -297,7 +297,7 @@ button:hover {
     /* Tambahkan gaya CSS khusus di sini */
     body {
       background-color: lightblue; /* Contoh perubahan */
-      background: url('https://i.pinimg.com/736x/08/d9/bf/08d9bfb74c34a8b4f41b3241e74f83e0.jpg') no-repeat center center fixed;
+      background: url('9.jpg') no-repeat center center fixed;
       background-size: cover;
       padding: 0;
       margin: 0;
