--- a/styles.css
+++ b/styles.css
@@ -356,6 +356,7 @@ button:hover {
       padding: 15px 10px;
       font-size: 12px;
       text-align: center;
+      background-color: rgba(0, 0, 0, 0.1);
     }
   
     .footer-container {
